1. Message Time break issue solved 2. Data table icon alignment solved

--- a/frontend/web/css/booking-request/booking-request.scss
+++ b/frontend/web/css/booking-request/booking-request.scss
@@ -607,6 +607,7 @@ $color-dark: #1E2339;
                     font-size: 12px;
                     text-align: right;
                     line-height: 20px;
+                    white-space: nowrap;
                 }
             }
 
@@ -692,7 +693,8 @@ $color-dark: #1E2339;
             }
 
             .user-details {
-                padding: 0 0px 0 20px;
+                padding: 0 0px 0 10px;
+                width: calc(100% - 55px);
 
                 .user-details-name,
                 .user-details-date {
