--- a/frontend/web/css/data-table.scss
+++ b/frontend/web/css/data-table.scss
@@ -165,6 +165,10 @@ div.dataTables_wrapper {
     }
 }
 
+table.dataTable thead>tr>th.sorting {
+    height: 30px !important;
+}
+
 
 @media (min-width: 576px) {
     .datatable-wrapper {
